add icons and change list accordion styles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "Courtside",
-        "firestore"
+        "firebaseapp",
+        "firestore",
+        "QXSSZVT"
     ]
 }
