web scraped all days

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ web-build/
 
 # Firebase
 firebase/web_scrape/firebase_secret_key.json
+
+# Backend
+firebase/web_scrape/requirements.txt
+firebase/web_scrape/project_env
