--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-screens": "~3.10.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-native-webview": "^11.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
