--- a/app.json
+++ b/app.json
@@ -1,32 +1,32 @@
 {
-  "expo": {
-    "name": "tabor-college-app",
-    "slug": "tabor-college-app",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/jj_icon.png",
-    "splash": {
-      "image": "./assets/splash_screen/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+    "expo": {
+        "name": "Tabor College Student",
+        "slug": "tabor-college-student",
+        "version": "1.0.1",
+        "orientation": "portrait",
+        "icon": "./assets/jj_icon.png",
+        "splash": {
+            "image": "./assets/splash_screen/splash.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "updates": {
+            "fallbackToCacheTimeout": 0
+        },
+        "assetBundlePatterns": ["**/*"],
+        "ios": {
+            "supportsTablet": true
+        },
+        "android": {
+            "package": "com.tabor.collegestudent",
+            "versionCode": 3,
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/jj_icon.png",
+                "backgroundColor": "#FFFFFF"
+            }
+        },
+        "web": {
+            "favicon": "./assets/favicon.png"
+        }
     }
-  }
 }
