--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "expo": {
         "name": "Tabor College Student",
         "slug": "tabor-college-student",
-        "version": "1.0.1",
+        "version": "1.0.2",
         "orientation": "portrait",
         "icon": "./assets/jj_icon.png",
         "splash": {
@@ -15,7 +15,16 @@
         },
         "assetBundlePatterns": ["**/*"],
         "ios": {
-            "supportsTablet": true
+            "supportsTablet": false,
+            "bundleIdentifier": "com.tabor.collegestudent",
+            "buildNumber": "1.0.2",
+            "config": {
+                "googleMapsApiKey": "AIzaSyCgs4qHsbIc4TvkpstzNnYaSg3nXQuy6A4"
+            },
+            "infoPlist": {
+                "NSLocationAlwaysUsageDescription": "This app needs to know where you are so it can show you things near you.",
+                "NSLocationWhenInUseUsageDescription": "This app needs to know where you are so it can show you things near you."
+            }
         },
         "android": {
             "package": "com.tabor.collegestudent",
@@ -23,6 +32,11 @@
             "adaptiveIcon": {
                 "foregroundImage": "./assets/jj_icon.png",
                 "backgroundColor": "#FFFFFF"
+            },
+            "config": {
+                "googleMaps": {
+                    "apiKey": "AIzaSyBOdtVFzk9GC0PYQzJDdWTA-wlTTw-J3e8"
+                }
             }
         },
         "web": {
